--- a/bin/com/pointcross/config/config.properties
+++ b/bin/com/pointcross/config/config.properties
@@ -1,11 +1,8 @@
-browser=ie
-url=http://cimstst.pointcrosslifesciences.com/OrchestraWeb150.1.0.000/English/OrchnewLogin.asp
+browser=firefox
+url=http://ta3s.com
+baseFilePath=
 
-#http://cimstest.pointcrosslifesciences.com/OrchestraWeb3.4.0.000/English/OrchnewLogin.asp?
-	url1=http://cimststvdr.pointcrosslifesciences.com/OrchestraWeb3.4.0.000/English/VDR/index.asp?
 
-Admin =ctdc_qual_dwhadmin1@pointcross.com
-pwd=Admin@12345
 
 
 
